# UCDD

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.txt  compile.sh  flake.nix  getlibs.sh
.github/workflows/: build.yml
base/: platform.c  property.cpp  random.cpp
base/tests/: CMakeLists.txt  test_mac.c  test_random_seed.cpp  test_randomness.cpp  test_time.cpp
cdd/: CMakeLists.txt  bellmanford.c  bellmanford.h  cache.c  cache.h  cddop.c  debug.c  kernel.c  print.c  relax.c  tarjan.c  tarjan.h
cdd/tests/: CMakeLists.txt  lib.dep  makefile.rules  test_bf.cpp
cmake/: UDBM.cmake  UUtils.cmake  doctest.cmake  xxhash.cmake
cmake/toolchain/: i686-linux-gcc14.cmake  i686-linux.cmake  x86_64-darwin.cmake  x86_64-linux-gcc14.cmake  x86_64-linux.cmake
dbm/: CMakeLists.txt
debug/: c_allocator.c
debug/tests/: test_new.cpp  test_utils.c
demo-program/: CMakeLists.txt  CMakeLists.txt~  demo-program.cpp
hash/: PointerTable.cpp
include/: config.h
include/base/: floats.hpp  meta.hpp  meta_visitor.hpp  platform.h  property.h  random.h  rangeset.h  sequence_filter.hpp  svector.hpp  time.hpp  visitor_macros.def
include/cdd/: cdd.h  debug.h  kernel.h
include/dbm/: constraints.h~  fed.h
include/debug/: c_allocator.h  tracing.h
include/hash/: PointerTable.h
include/io/: Base64Coder.h  Connection.h  License.h
io/: Base64Coder.cpp  CMakeLists.txt  Connection.cpp  License.cpp
io/tests/: CMakeLists.txt  test_key.cpp  test_license.cpp
src/: CMakeLists.txt  bellmanford.c  bellmanford.h  cache.c  cddop.c  config.h.cmake  cppext.cpp  debug.c  kernel.c  print.c  relax.c  relax.h  tarjan.c  tarjan.h
test/: CMakeLists.txt  test_cdd.cpp
toolchains/: i686-linux.cmake
